--- a/src/Style/ToDoStyle.css
+++ b/src/Style/ToDoStyle.css
@@ -82,3 +82,24 @@ input[type="text"]::placeholder {
         width: 90%;
     }
 }
+
+@media screen and (max-width: 480px) {
+
+    input {
+        height: 30px;
+        width: 150px;
+    }
+
+    input[type="text"],
+    button {
+        padding: 10px 20px;
+        /* Larger padding for smaller screens */
+    }
+
+    input[type="text"] {
+        width: 100%;
+        /* Full width for smaller screens */
+        margin-bottom: 10px;
+        /* Space between input and button */
+    }
+}
